--- a/ev-product.Rmd
+++ b/ev-product.Rmd
@@ -46,12 +46,12 @@ E[X] &= n\frac{N_1}{N} = 3\frac{18}{38} \\
 E[Z] &= n\frac{N_1}{N} = 2\frac{18}{38}.
 \end{align*}
 The only non-trivial part is calculating $E[X^2]$. However, we showed in 
-Lessons \@ref(lotus) and \@ref(linearity) that for a binomial random variable $X$, 
-\[ E[X(X-1)] = n(n-1) \frac{N_1^2}{N_0^2}. \]
+Examples \@ref(exm:binomial-lotus) and \@ref(exm:binomial-lotus-2) that for a binomial random variable $X$, 
+\[ E[X(X-1)] = n(n-1) \frac{N_1^2}{N^2}. \]
 Since $E[X(X-1)] = E[X^2 - X] = E[X^2] - E[X]$, we can solve for $E[X^2]$:
 \begin{align*}
 E[X^2] &= E[X(X-1)] + E[X] \\
-&= n(n-1) \frac{N_1^2}{N_0^2} + n\frac{N_1}{N}
+&= n(n-1) \frac{N_1^2}{N^2} + n\frac{N_1}{N}
 \end{align*}
 For the number of bets that Xavier wins,
 \[ E[X^2] = 3(2)\frac{18^2}{38^2} + 3\frac{18}{38}. \]
