--- a/lotus.Rmd
+++ b/lotus.Rmd
@@ -161,3 +161,5 @@ is infinite.
 2. Let $X$ be a $\text{Hypergeometric}(n, N_1, N_0)$ random variable. Calculate $E[X(X-1)]$.
 
 3. Let $X$ be a $\text{Poisson}(\mu)$ random variable for $0 < \mu < 1$. Calculate $E[X!]$.
+
+4. Let $X$ be a $\text{NegativeBinomial}(r, p)$ random variable. Calculate $E[(X+1)X]$.
